# gabuzomeu

./: .gitignore  CMakeLists.txt  README.md  del_add_commit_push.bat  gabuzomeu.sln  release.bat
CharToCharGenerator/: CMakeLists.txt  CharToCharGenerator.vcxproj  main.cpp
CharToCharGenerator/x64/Release/CharToCh.b90b5e1f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CharToCharGenerator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Common/: ConverterTools.cpp  ConverterTools.hpp  RuntimeExceptions.cpp  RuntimeExceptions.hpp  bnflite.hpp
DataAsCodeGenerator/: CMakeLists.txt  DataAsCodeGenerator.vcxproj  main.cpp
DataAsCodeGenerator/x64/Release/DataAsCo.0b869f0c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DataAsCodeGenerator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DataGenerator/: DataGenerator.vcxproj
NumberGenerator/: CMakeLists.txt  NumberGenerator.vcxproj  main.cpp
NumberGenerator/x64/Debug/NumberGenerator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NumberGenerator/x64/Release/NumberGenerator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NumberGenerator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PhraseGenerator/: CMakeLists.txt  PhraseGenerator.vcxproj  main.cpp
PhraseGenerator/x64/Debug/PhraseGenerator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PhraseGenerator/x64/Release/PhraseGenerator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PhraseGenerator.lastbuildstate  PhraseGenerator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RuleOfThree/: CMakeLists.txt  RuleOfThree.vcxproj  main.cpp
SpaceGenerator/: CMakeLists.txt  SpaceGenerator.vcxproj  main.cpp
SpaceGenerator/x64/Debug/SpaceGenerator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SpaceGenerator/x64/Release/SpaceGenerator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpaceGenerator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
UnitTest/: UnitTest.vcxproj
XXLengthGenerator/: CMakeLists.txt  XXLengthGenerator.vcxproj  main.cpp
XXLengthGenerator/x64/Debug/XXLength.220e271c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  XXLengthGenerator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
XXLengthGenerator/x64/Release/XXLength.220e271c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  XXLengthGenerator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
gabuzomeu/: CMakeLists.txt  gabuzomeu.vcxproj  gabuzomeu.vcxproj.filters  main.cpp
gabuzomeu/x64/Debug/: vc142.idb
gabuzomeu/x64/Debug/gabuzomeu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
gabuzomeu/x64/Release/gabuzomeu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gabuzomeu.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
material/: 99BottlesOfBeer.gbzm  BNC.gbzm  HelloWorld.gbzm  HelloWorld_BigInt.gbzm  HelloWorld_TwoBrains.gbzm  HelloWorld_using_big_integers.gbzm  HelloWorld_using_two_birds.gbzm  IveGotThePower.gbzm  LanguageExtentions.txt  Rule110.gbzm  Rule110_using_infinite_zero_trick.gbzm  ansi.gbzm  demo_quine_compact.bat  factorial_using_a_loop.gbzm  factorial_using_call.gbzm  factorial_using_gbzm.gbzm  factorial_using_loop.gbzm  gabuzomeu.egt  gabuzomeu.grm  gabuzomeu_vs_brainfuck.txt  grammar_verified_online_on_bnfplayground_dot_pauliankline_dot_com.ebnf  little_square_pattern.gbzm  new_extentions.gbzm  parsingTest.gbzm  perfectNumbers.gbzm  quine_compact.gbzm  quine_compact_code_part.gbzm  quine_compact_intermediary.gbzm  quine_compact_t.gbzm  quine_idea.txt  quine_skeleton.gbzm  readme.txt  reverse.gbzm  reverse_using_bird.gbzm  reverse_using_stack.gbzm  song.txt  songParts.txt  spaceship_pattern.gbzm  syntax_error.gbzm  ultimate_quine.gbzm
ni/: CMakeLists.txt  main.cpp  ni.vcxproj
x64/Debug/: gabuzomeu.ilk
